k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-django
  name: sample-django
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8000
      nodePort: 30007
  selector:
    app: sample-django
