k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-django
spec:
  rules:
    - host: sample-django.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sample-django
                port:
                  number: 8080
